feat: update dependencies and improve Krabot delay handling
- Bump Quarkus platform version to 3.32.2 in `pom.xml`.
- Reduce schedule delay for Kraland scraping from 5m to 1m in `application.properties`.
- Extend `.serena/project.yml` with additional memory configuration.
- Enhance Krabot delay mechanism with heartbeat logic and interval timers.
- Add explicit permissions for Maven compile in `.claude/settings.local.json`.